[package]
name = "bcs"
version = "0.1.4"
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/zefchain/bcs"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
core2 = { version = "0.3", default_features = false, features = ["alloc"] }
serde = { version = "1.0.145", default_features = false, features = ["derive", "alloc"] }

